Add starting html for FBP

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Frisky Bananas Productions</title>
+    <meta charset="utf-8"/>
+  </head>
+  <body>
+    <h1>Frisky Bananas Productions</h1>
+  </body>
+</html>
+
+<!-- starting code
+--
 layout: default
 ---
 
@@ -21,3 +33,4 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
+-->
