--- a/index.html
+++ b/index.html
@@ -5,7 +5,37 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    <h1>Frisky Bananas Productions</h1>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<h1><a href="https://www.youtube.com/channel/UCrscPO_vIQ1-mbJdipnB9Nw">Frisky Bananas Productions</a><h1>
+<h2>A place to laugh</h2>
+
+<h3><u>Staff</u></h3>
+<h4><a href="https://twitter.com/PhlyingFish">Erik Fisher</a></h4>
+<p>Chief Editor</p>
+
+<div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3" data-width="350" data-show-text="false"><blockquote cite="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/erik.fisher.7">Erik Fisher</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3">Saturday, January 23, 2016</a></blockquote></div>
+
+
+
+<h4><a href="https://twitter.com/WhackaZach">Zach Tracy</a></h4>
+<p>Cofounder and Star</p>
+
+<div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/zach.tracy.1">Mahlon Zach Tracy</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3">Thursday, June 2, 2016</a></blockquote></div>
+
+
+<h4><a href="https://twitter.com/D_Mapes9">Daniel Maples</a></h4>
+<p>Cofounder and Star</p>
+
+<div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" data-width="350" data-show-text="false"><blockquote cite="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/daniel.maples.9">Daniel Maples</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3">Tuesday, July 5, 2016</a></blockquote></div>
+
   </body>
 </html>
 
