--- a/index.html
+++ b/index.html
@@ -14,27 +14,34 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
+<img src="https://lh3.googleusercontent.com/-pbJbBO-HY1E/U_kmqtIXXaI/AAAAAAAAABc/ghkIm_FUzg8/s426/adult-chiquita-banana-costume.jpg" width=200/>
 <h1><a href="https://www.youtube.com/channel/UCrscPO_vIQ1-mbJdipnB9Nw">Frisky Bananas Productions</a><h1>
 <h2>A place to laugh</h2>
 
+<p>&nbsp;</p>
 <h3><u>Staff</u></h3>
 
-<h4><a href="https://twitter.com/WhackaZach">Zach Tracy</a></h4>
-<p>Cofounder and Star</p>
+<p><a href="https://twitter.com/WhackaZach">Zach Tracy</a> - Cofounder and Star</p>
 
 <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/zach.tracy.1">Mahlon Zach Tracy</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3">Thursday, June 2, 2016</a></blockquote></div>
 
 
-<h4><a href="https://twitter.com/D_Mapes9">Daniel Maples</a></h4>
-<p>Cofounder and Star</p>
+<p><a href="https://twitter.com/D_Mapes9">Daniel Maples</a> - Cofounder and Star</p>
 
 <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" data-width="350" data-show-text="false"><blockquote cite="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/daniel.maples.9">Daniel Maples</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3">Tuesday, July 5, 2016</a></blockquote></div>
 
 
-<h4><a href="https://twitter.com/PhlyingFish">Erik Fisher</a></h4>
-<p>Chief Editor</p>
+<p><a href="https://twitter.com/PhlyingFish">Erik Fisher</a> - Chief Editor</p>
 
 <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3" data-width="350" data-show-text="false"><blockquote cite="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/erik.fisher.7">Erik Fisher</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=1013513282042250&amp;set=a.102091003184487.2936.100001507620675&amp;type=3">Saturday, January 23, 2016</a></blockquote></div>
+
+
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<a href="https://www.youtube.com/watch?v=Dkm8Hteeh6M"><img src="https://res.cloudinary.com/teepublic/image/private/s--aHtXDkTX--/t_Preview/b_rgb:0f7b47,c_lpad,f_jpg,h_630,q_90,w_1200/v1461165084/production/designs/474199_2.jpg" width=300/></a>
+
 
   </body>
 </html>
