--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Frisky Bananas Productions</title>
     <meta charset="utf-8"/>
   </head>
-  <body>
+  <body style= "background-color: LightYellow">
     <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
