--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
+<div style="text-align: center">
 <img src="https://lh3.googleusercontent.com/-pbJbBO-HY1E/U_kmqtIXXaI/AAAAAAAAABc/ghkIm_FUzg8/s426/adult-chiquita-banana-costume.jpg" width=200/>
 <h1 style="font-family: Arial"><a href="https://www.youtube.com/channel/UCrscPO_vIQ1-mbJdipnB9Nw">Frisky Bananas Productions</a><h1>
 <h2>A place to laugh</h2>
 
 <p>&nbsp;</p>
 <h3><u>Staff</u></h3>
+</div>
+
 
 <p><a href="https://twitter.com/WhackaZach">Zach Tracy</a> - Cofounder and Star</p>
 
