--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <img src="https://lh3.googleusercontent.com/-pbJbBO-HY1E/U_kmqtIXXaI/AAAAAAAAABc/ghkIm_FUzg8/s426/adult-chiquita-banana-costume.jpg" width=200/>
 <p>&nbsp;</p>
 <h1><a href="https://www.youtube.com/channel/UCrscPO_vIQ1-mbJdipnB9Nw">Frisky Bananas Productions</a><h1>
-<h2>A place to laugh</h2>
+<h2>A Place to Laugh</h2>
 
 <p>&nbsp;</p>
 <h3><u>Staff</u></h3>
