--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 <p style="font-size: 25px"><a href="https://twitter.com/WhackaZach">Zach Tracy</a> - Cofounder and Star</p>
 
 <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/zach.tracy.1">Mahlon Zach Tracy</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=967461853374881&amp;set=a.101650799955995.1670.100003332253312&amp;type=3">Thursday, June 2, 2016</a></blockquote></div>
+<p>&nbsp;</p>
 
 
 <p style="font-size: 25px"><a href="https://twitter.com/D_Mapes9">Daniel Maples</a> - Cofounder and Star</p>
 
 <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" data-width="350" data-show-text="false"><blockquote cite="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3" class="fb-xfbml-parse-ignore">Posted by <a href="https://www.facebook.com/daniel.maples.9">Daniel Maples</a> on&nbsp;<a href="https://www.facebook.com/photo.php?fbid=1087166718036428&amp;set=a.105529232866853.16594.100002293311388&amp;type=3">Tuesday, July 5, 2016</a></blockquote></div>
+<p>&nbsp;</p>
 
 
 <p style="font-size: 25px"><a href="https://twitter.com/PhlyingFish">Erik Fisher</a> - Chief Editor</p>
