--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div style="text-align: center">
+<div align="center">
 <img src="https://lh3.googleusercontent.com/-pbJbBO-HY1E/U_kmqtIXXaI/AAAAAAAAABc/ghkIm_FUzg8/s426/adult-chiquita-banana-costume.jpg" width=200/>
 <p>&nbsp;</p>
 <h1><a href="https://www.youtube.com/channel/UCrscPO_vIQ1-mbJdipnB9Nw">Frisky Bananas Productions</a><h1>
